second line of commit message sales dashboard updates

--- a/projects.html
+++ b/projects.html
@@ -54,6 +54,22 @@
                 </div>
             </div>
 
+            <!-- Project 3 -->
+            <div class="col-md-4">
+                <div class="card shadow-sm border-0">
+                    
+                    <div class="card-body">
+                        <h5 class="card-title fw-bold">Data Analysis Dashboard</h5>
+                        <p class="card-text text-secondary">
+                            This analysis provides actionable insights into product performance, seasonal sales patterns, and customer purchase behavior.
+-It can support business decisions related to marketing, inventory planning, and revenue optimization.
+
+                        </p>
+                        <a href="https://mcrolins.github.io/presentation/" class="btn btn-dark">View Project</a>
+                    </div>
+                </div>
+            </div>
+
         </div> <!-- end row -->
     </div> <!-- end container -->
 </section>
