added laudry management project

--- a/projects.html
+++ b/projects.html
@@ -70,7 +70,24 @@
                 </div>
             </div>
 
+            <!-- Project 4 -->
+            <div class="col-md-4">
+                <div class="card shadow-sm border-0">
+                    
+                    <div class="card-body">
+                        <h5 class="card-title fw-bold">Laundry Management system frontend</h5>
+                        <p class="card-text text-secondary">
+                            A responsive frontend for a laundry management system built with HTML, CSS, and JavaScript. Has three sections for employees,customers and admin.
+                            Password validation and form handling implemented using JavaScript, any name and password checks so long as they meet the required criteria. 
+
+                        </p>
+                        <a href="https://mcrolins.github.io/egerton_laundry/" class="btn btn-dark">View Project</a>
+                    </div>
+                </div>
+            </div>
+
         </div> <!-- end row -->
+    
     </div> <!-- end container -->
 </section>
 
